--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,23 @@
 ---
 layout: default
 ---
+
+{{ content }}
+<!-- TODO - decidir se coloca ou nao informação sobre autor.. 
+{% assign author = site.authors[page.author] %}
+<small>This post was brought to you today by:</small>
 <div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+	<div class="meta">
+		<img src="http://www.gravatar.com/avatar/{{ author.gravatar }}?s=40">
+		<span class="author">{{ author.display_name }}</span>
+	</div>
+-->
+{% include disqus.html%}
+<div id="post-nav" class="clearfix">
+  {% if page.previous.url %}
+  <a rel="previous" id="previous_link" href="{{ site.baseurl }}{{page.previous.url}}">{{ site.baseurl }}{{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+  <a rel="next" id="next_link" href="{{ site.baseurl }}{{page.next.url}}">{{ site.baseurl }}{{page.next.title}} &raquo;</a>
+  {% endif %}
 </div>
