--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,50 +1,15 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col  footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            <a href="https://github.com/{{ site.github_username }}">
-              <span class="icon  icon--github">
-                <i class="fa fa-github"></i>
-              </span>
-
-              <span class="username">{{ site.github_username }}</span>
-            </a>
-          </li>
-          {% endif %}
-
-          {% if site.facebook_username %}
-          <li>
-            <a href="https://facebook.com/{{ site.facebook_username }}">
-              <span class="icon  icon--facebook">
-                <i class="fa fa-facebook"></i>
-              </span>
-
-              <span class="username">{{ site.facebook_username }}</span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
+<footer>
+  <ul class="social">
+  {% if site.facebook_username %}<li><a href="http://facebook.com/{{ site.facebook_username }}"><span class="icon-facebook2"></span></a></li>{% endif %}
+  {% if site.twitter_username %}<li><a href="http://twitter.com/{{ site.twitter_username }}"><span class="icon-twitter"></span></a></li>{% endif %}
+  {% if site.github_username %}<li><a href="http://github.com/{{ site.github_username }}"><span class="icon-github"></span></a></li>{% endif %}
+  {% if site.instagram_username %}<li><a href="http://instagram.com/{{ site.instagram_username }}"><span class="icon-instagram"></span></a></li>{% endif %}
+  {% if site.email %}<li><a href="mailto:{{ site.email }}"><span class="icon-drafts"></span></a></li>{% endif %}
+  </ul>
+  <p>{{ site.footer_text }}</p>
 </footer>
+
+</div> <!-- End content wrap -->
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{{ site.baseurl}}/_assets/js/main.js"></script>
