--- a/_assets/_sass/_layout.scss
+++ b/_assets/_sass/_layout.scss
@@ -80,7 +80,7 @@ section {
 * Site header
 */
 header {
-  background: $primaryColor;
+  background: background: #000000 url(https://github.com/maratonago/maratonago.github.io/raw/master/_assets/images/header.png) 100% 100% no-repeat; 
   color: $textPrimaryColor;
   position: relative;
   padding-top: 13%;
