--- a/_assets/_sass/_layout.scss
+++ b/_assets/_sass/_layout.scss
@@ -80,7 +80,7 @@ section {
 * Site header
 */
 header {
-  background-color: $primaryColor;
+  //background-color: $primaryColor;
   background-image: url(https://github.com/maratonago/maratonago.github.io/raw/master/_assets/images/header.png); 
   background-position: 1% 1%;
   background-repeat: no-repeat;
