--- a/_assets/_sass/_layout.scss
+++ b/_assets/_sass/_layout.scss
@@ -84,6 +84,7 @@ header {
   background-image: url(https://github.com/maratonago/maratonago.github.io/raw/master/_assets/images/header.png); 
   //background-position: 1% 1%;
   background-repeat: no-repeat;
+  background-size: contain;
   color: $textPrimaryColor;
   position: relative;
   padding-top: 13%;
