problema rujia liu

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 
+<div id="post-content">
 {{ content }}
-<!-- TODO - decidir se coloca ou nao informação sobre autor.. 
+</div>
+
+<!-- TODO - decidir se coloca ou nao informação sobre autor..
 {% assign author = site.authors[page.author] %}
 <small>This post was brought to you today by:</small>
 <div class="post">
