--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
 </div> <!-- End content wrap -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js"></script>
 <script src="{{ site.baseurl}}/_assets/js/main.js"></script>
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
