--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -14,7 +14,7 @@
 $base-font-family: 'Ubuntu Mono', sans-serif, monospace;
 
 //$code-font: Open Sans, sans-serif;
-//$code-font: Ubuntu Mono, sans-serif;
+$code-font: Ubuntu Mono, sans-serif;
 
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
