--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -7,14 +7,14 @@
 * Variables
 */
 
-//@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400italic,400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700);
+//@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400italic,400,300,700);
 
-//$base-font-family: 'Open Sans', sans-serif;
-$base-font-family: 'Ubuntu Mono', sans-serif, monospace;
+$base-font-family: 'Open Sans', sans-serif;
+//$base-font-family: 'Ubuntu Mono', sans-serif, monospace;
 
-//$code-font: Open Sans, sans-serif;
-$code-font: Ubuntu Mono, sans-serif;
+$code-font: Open Sans, sans-serif;
+//$code-font: Ubuntu Mono, sans-serif;
 
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
